refactor [with-ai] FT-005 생성자 개선 - relationships null 처리
- FamilyMembersWithRelationshipsResponse 생성자에서 relationships null 허용
- Objects.requireNonNullElse로 null인 경우 빈 리스트로 자동 변환
- 실제 사용 시나리오 고려: 관계 정보가 아직 없을 수 있음

## 변경 사항

### 생성자 로직 개선
- relationships 파라미터: null 허용 → 빈 리스트로 자동 변환
- members 파라미터: 여전히 null 불허 (최소 본인은 존재)
- 방어적 프로그래밍 원칙 적용

### 테스트 케이스 추가
- relationships null 처리 테스트 추가
- 기존 null 예외 테스트에서 relationships 부분 제거
- 실제 동작 검증 (관계 없는 구성원 응답 확인)

### Javadoc 업데이트
- relationships 파라미터 설명 변경
- 예외 발생 조건 명확화

## 기술적 개선 효과

- 더 관대한 API 설계 (Robustness Principle)
- 초기 Family 생성 시나리오 대응
- NPE 위험성 감소

**🛡️ 방어적 프로그래밍으로 사용성 개선!**